implement as simple evaluator, improve IR a bit